<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sesame Upload Queue</string>
    <string name="button_refresh">Refresh</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_preferences">Settings</string>
    <string name="pref_category">Sesame Internal Login</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_dialog_title">Enter Internal Username</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_dialog_title">Enter Internal Password</string>
    <string name="text_unknown"></string>
    <string name="pref_about_category">About</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_number">0.1</string>
    <string name="pref_category_refresh">Refresh Settings</string>
    <string name="pref_time_refresh">Screen refresh interval</string>
    <string name="pref_server_refresh">Data refresh interval</string>
</resources>
