<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category">
        <EditTextPreference
                android:key="preference_username"
                android:title="@string/pref_username_title"
                android:dialogTitle="@string/pref_username_dialog_title"
                android:inputType="textNoSuggestions"/>
        <EditTextPreference
                android:key="preference_password"
                android:title="@string/pref_password_title"
                android:dialogTitle="@string/pref_password_dialog_title"
                android:inputType="textPassword"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about_category">
        <PreferenceScreen
                android:key="preference_version"
                android:title="@string/pref_version_title"
                android:summary="@string/pref_version_number"
                android:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>